# Nebuis-Lesson-1

./: pyproject.toml
shared/: config.py  constants.py  utils.py
task_1/: task_1_rubric.ipynb
task_2/: task_2_generate.ipynb
task_3/: assignment_01.xlsx  task_3_manual_eval.ipynb  ~$assignment_01.xlsx
task_4/: task_4_improvement.ipynb
task_5/: task_5_judge_model.ipynb
task_6/: task_6_judge_analysis.ipynb
